feat/Error Handling Pattern
