# app/Shared/Interfaces/Http/Responses/ApiResponse.php
@@ -1,0 +1,33 @@
+<?php
+
+namespace App\Shared\Interfaces\Http\Responses;
+
+use Illuminate\Http\JsonResponse;
+
+trait ApiResponse
+{
+    /**
+     * Return a success JSON response.
+     */
+    protected function successResponse($data = null, string $message = null, int $statusCode = 200): JsonResponse
+    {
+        return response()->json([
+            'status' => 'success',
+            'data'   => $data,
+            'message' => $message
+        ], $statusCode);
+    }
+
+    /**
+     * Return an error JSON response.
+     */
+    protected function errorResponse(string $message, string $code, int $statusCode, $details = null): JsonResponse
+    {
+        return response()->json([
+            'status' => 'error',
+            'message' => $message,
+            'code' => $code,
+            'details' => $details
+        ], $statusCode);
+    }
+}
